--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,27 @@
+# Framework Web
 flask==3.0.0
 flask-cors==4.0.0
+werkzeug==3.0.1
+
+# Computación Científica
 numpy==1.24.3
 scipy==1.11.4
-scikit-learn==1.3.2
-tensorflow==2.15.0
-joblib==1.3.2
 pandas==2.1.4
+
+# Machine Learning
+scikit-learn==1.3.2
+imbalanced-learn==0.11.0
+
+# Deep Learning
+tensorflow==2.15.0
+keras==2.15.0
+
+# Procesamiento de Señales
+pywavelets==1.5.0
+
+# Visualización (para el notebook)
+matplotlib==3.8.2
+seaborn==0.13.0
+
+# Utilidades
+pathlib2==2.3.7.post1
